<resources>
    <string name="payTicketButton">Order ticket</string>
    <string name="paymentSuccess">Payment Success!</string>
    <string name="backToHomeButton">Back to home</string>
    <string name="app_name" translatable="false">Le Petit Cinéma</string>
    <string name="Address" translatable="false">Van Coothplein 17b, 4811 NC BREDA</string>
    <string name="OpeningHours">Openingstijden</string>
    <string name="Monday">Monday:      gesloten</string>
    <string name="Tuesday">Tuesday:     09:30 tot 21:30</string>
    <string name="Wednesday">Wednesday:     09:30 tot 21:30</string>
    <string name="Thursday">Thursday:     09:30 tot 21:30</string>
    <string name="Friday">Friday:     09:30 tot 21:30</string>
    <string name="Sunday">Sunday:     12:00 tot 17:00</string>
    <string name="TelephoneNumber" translatable="false">+31 76 562 3773</string>
    <string name="Emailaddress" translatable="false">events@lepetitcinema.nl</string>
    <string name="Saturday">zaterdag:     09:30 tot 22:30</string>
    <string name="menuItemETicket">Tickets</string>
    <string name="ticketString">Ticket</string>
    <string name="paymentSimulationAmountTickets">Amount of tickets:\u0020</string>
    <string name="paymentSimulationSeats">Seats:\u0020</string>
    <string name="google_api_key" translatable="false">AIzaSyA-Yz7Y3DI-L5KE6_mbvJPya7YVcD5htRI</string>
    <string name="SP_AmountOfSeats">Amount of seats:</string>
    <string name="SP_Child">Child (age 0-12):</string>
    <string name="SP_Normal">Normal (age 13-64):</string>
    <string name="SP_Elder">Elder (age 65+):</string>
    <string name="SP_TotalPrice">Total price:</string>
    <string name="SP_TotalTickets">Total amount of tickets:</string>
    <string name="SP_BuyTickets">Buy tickets</string>
    <string name="SP_MustReserveAtLeastOne">You must reserve at least one seat and ticket!</string>
    <string name="SP_NothingSelected">There is nothing selected.</string>
    <string name="SP_NoSeatsSelected">There are  no seats selected</string>
    <string name="SP_PickSeatsButton">Pick my seats for me</string>
    <string name="SP_NotEnoughAvailable">There are not enough seats available,</string>
    <string name="SP_OkButton">Ok</string>
    <string name="SP_NoTicketsSelected">There are no tickets selected.</string>
    <string name="SP_TicketsAndSeatsNotEqual">Amount of tickets and seats are not equal!</string>
    <string name="SP_TAndSNotEqual_Message">There are currently %1$d seats and %2$d tickets selected.</string>
    <string name="SP_changeSelectionButton">Change selection</string>
    <string name="SendReview">Send Review</string>
    <string name="Reviewheader">Review Film</string>
    <string name="Main_searchButton">Search</string>
</resources>
